manifest/objects/Pipeline_Report_Snapshot__c.object
<CustomObject>
    <description>Custom object to capture the Pipeline Report Snapshot</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <label>Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Id_18__c</fullName>
        <label>Account Id 18</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <label>Opportunity ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id_18__c</fullName>
        <label>Opportunity Id 18</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Pipeline Report Snapshot</label>
    <nameField>
        <displayFormat>PRS-{0000}</displayFormat>
        <label>Pipeline Report Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pipeline Report Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>